--- a/MvxSlidingPanelsSample.Touch/Views/SecondView_iPhone.xib
+++ b/MvxSlidingPanelsSample.Touch/Views/SecondView_iPhone.xib
@@ -58,6 +58,7 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<bool key="IBUIEnabled">NO</bool>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
